Refactor to use namespaces, harden strict parameter, remove deprecated code, etc

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
   "require": {
     "php": ">=7.4",
     "ext-pdo": "*",
+    "ext-ctype": "*",
     "ext-mysqli": "*",
     "toitzi/modseven": "*",
     "modseven/database": "*",
